--- a/app/views/binders/newfile.html.erb
+++ b/app/views/binders/newfile.html.erb
@@ -17,7 +17,7 @@
   <div><%= f.label :body, "Body" %><br />
   <%= f.text_area  :body %></div>
 
-<%= f.fields_for :tag do |builder| %>
+<%= f.fields_for Tag.new do |builder| %>
 
     <table>
       <tr>
