--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -9,6 +9,9 @@
 	<!-- render 'shared/error_messages' -->
 	<%= render 'shared/error_messages', object: f.object %>
 
+  	<div><%= f.label :avatar, "Profile Picture:" %><br />
+  	<%= f.file_field :avatar %></div>
+
 	<div><%= f.label :bio, "Bio" %><br />
 	<%= f.text_area :bio %></div>
 
