--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -2,7 +2,7 @@
 <p>app/views/teachers/show.html.erb</p>
 
 <p><%= "#{ @teacher.full_name }" %></p>
-
+<p><%=  !@teacher.info.avatar.path.to_s.empty? ? image_tag(@teacher.info.avatar.to_s, :width => "200") : "<no profile picture>" %></p>
 <p><%= "Bio: #{@teacher.info.bio}" if !@teacher.info.bio.empty? %></p>
 <p><%= "Website: #{@teacher.info.website}" if !@teacher.info.website.empty? %></p>
 <p><%= "Profile Picture: #{@teacher.info.profile_picture}" if !@teacher.info.profile_picture.empty? %></p>
