--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 		<%= %> <!-- render 'shared/error_messages' -->
 		<%= yield %>
 		<% if Rails.env.development? %>
-		<div style="position:absolute; border:1px solid black; bottom:10px; right:10px;">
+		<div style="position:absolute; border:1px solid black; top:10px; right:10px;">
 			<%= debug(params) %>
 		</div>
 		<% end %>
