--- a/app/views/binders/index.html.erb
+++ b/app/views/binders/index.html.erb
@@ -1,14 +1,14 @@
-<h3>Binders#index</h3>
-<p>app/views/binders/index.html.erb</p>
+<h3>Binders#<%= params[:action] %></h3>
+<p>app/views/binders/<%= params[:action] %>.html.erb</p>
 <p>Currently In: <%= link_to "Home", binders_path %> </p>
 
 <div>Contents:
 	<br />
 	<%= "Empty" if @binders.empty? %>
 	<% @binders.each do |binder| %>
-	<%= link_to binder.title, binder %>
-  	(<%= link_to "Move", move_binder_path(binder) %>)
-    (<%= link_to "Copy", copy_binder_path(binder) %>)
+	  <%= link_to binder.title, named_binder_route(binder) %>
+  	(<%= link_to "Move", named_binder_route(binder, "move") %>)
+    (<%= link_to "Copy", named_binder_route(binder, "copy") %>)
   	(<%= link_to "Permissions", binder_permissions_path(binder) %>)
   	(<%= link_to "Delete", binder_path(binder), :method => :delete %>)
   	<%= !binder.body.blank? ? ("(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")")) : "" %>
