New routing almost done, verification in progress

--- a/app/views/binders/new.html.erb
+++ b/app/views/binders/new.html.erb
@@ -36,10 +36,8 @@
   <br />
 
 </div>
-
-	<div><%= f.label :body, "Body" %><br />
-	<%= f.text_area  :body %></div>
-
+<hr />
+<h1>Tags:</h1>
 	<%= f.fields_for :tag do |builder| %>
 
 		<table>
