--- a/app/views/binders/index.html.erb
+++ b/app/views/binders/index.html.erb
@@ -9,7 +9,7 @@
 	  <%= link_to binder.title, named_binder_route(binder) %>
   	(<%= link_to "Move", named_binder_route(binder, "move") %>)
     (<%= link_to "Copy", named_binder_route(binder, "copy") %>)
-  	(<%= link_to "Permissions", binder_permissions_path(binder) %>)
+  	(<%= link_to "Permissions", named_binder_route(binder, "permissions") %>)
   	(<%= link_to "Delete", binder_path(binder), :method => :delete %>)
   	<%= !binder.body.blank? ? ("(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")")) : "" %>
   	<%= "(#{binder.files} files, #{binder.folders} folders)" if binder.type == 1 %>
@@ -19,4 +19,4 @@
 </div>
 <br />
 <%= link_to "Create new binder", new_binder_path %><br /><br />
-<%= link_to "Trash", trash_path %>
+<%= link_to "Trash", trash_path(params[:username]) %>
