--- a/app/views/binders/permissions.html.erb
+++ b/app/views/binders/permissions.html.erb
@@ -23,7 +23,7 @@
       Type: <%= p["type"] %><br />
       Shared with: <%= p["shared_id"] %><br />
       Authorization Level: <%= p["auth_level"] %><br />
-      <%= link_to "Delete this permission", destroy_binder_permission_path(@binder, @binder.permissions.index(p)), :method => :delete %><br /><br />
+      <%= link_to "Delete this permission", named_binder_route(@binder, "permissions/#{@binder.permissions.index(p)}"), :method => :delete %><br /><br />
     <% end %>
   <% end %>
   <br /><br />
@@ -32,7 +32,7 @@
 
 
 <div>Add New Permission:<br /><br />
-<%= form_for @binder, :url => create_binder_permission_path do |f| %>
+<%= form_for @binder, :url => named_binder_route(@binder, "permissions") do |f| %>
 
   <%= label_tag :type, "Type:" %><br />
   <%= select_tag :type, options_for_select([1, 3])  %><br />
