--- a/app/views/binders/newcontent.html.erb
+++ b/app/views/binders/newcontent.html.erb
@@ -21,7 +21,7 @@
   <div><%= f.label :body, "Body" %><br />
   <%= f.text_area  :body %></div>
 
-<%= f.fields_for :tag do |builder| %>
+<%= f.fields_for Tag.new do |builder| %>
 
     <table>
       <tr>
