--- a/app/views/binders/newfile.html.erb
+++ b/app/views/binders/newfile.html.erb
@@ -1,7 +1,7 @@
 <h3>Binders#newfile</h3>
 <p>app/views/binders/newfile.html.erb</p>
 
-<%= form_for Binder.new, :url => binders_newfile_path do |f| %>
+<%= form_for Binder.new, :url => new_binder_file_path do |f| %>
 
   <div><%= f.label :parent, "Parent (to be replaced with a directory browser):" %><br />
   <%= f.select(:parent, options_from_collection_for_select(@binders, :id, :title)) %></div>
