--- a/app/views/binders/permissions.html.erb
+++ b/app/views/binders/permissions.html.erb
@@ -1,5 +1,5 @@
-<h3>Binders#permissions</h3>
-<p>app/views/binders/permissions.html.erb</p>
+<h3>Binders#<%= params[:action] %></h3>
+<p>app/views/binders/<%= params[:action] %>.html.erb</p>
 
 
 <div>Inherited Permissions:<br />
@@ -45,6 +45,6 @@
   <br />
   <br />
   <%= f.submit "Add Permission" %>
-  <%= link_to "Back", @binder.parent["id"] == "0" ? binders_path : binder_path(@binder.parent["id"]) %>
+  <%= link_to "Back", @binder.parent["id"] == "0" ? binders_path : named_binder_route(@binder.parent["id"]) %>
 <% end %>
 </div>
