--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -1,6 +1,6 @@
-<h3>Binders#show</h3>
-<p>app/views/binders/show.html.erb</p>
-<%= @boo %>
+<h3>Binders#<%= params[:action] %></h3>
+<p>app/views/binders/<%= params[:action] %>.html.erb</p>
+
 <p>Currently In:<% @binder.parents.each do |parent| %>
 	<% if parent["id"] == "0" %>
 		<%= link_to "Home", binders_path %> /
@@ -24,13 +24,13 @@
 	<% @children.each do |binder| %>
 
   		<%= link_to binder.title, named_binder_route(binder) %>
-		<%= link_to "(Edit)", edit_binder_path(binder) if binder.type == 2 %>
-		<%= link_to "(Update)", new_binder_version_path(binder) if binder.type == 2 %>
-		<%= link_to "(Versions)", binder_versions_path(binder) if binder.type == 2 %>
+		<%= link_to "(Update)", named_binder_route(binder, "update") if binder.type == 2 %>
+		<%= link_to "(Versions)", named_binder_route(binder, "versions") if binder.type == 2 %>
+		(<%= link_to "Edit", named_binder_route(binder, "edit") %>)
   		(<%= link_to "Move", named_binder_route(binder, "move") %>)
   		(<%= link_to "Copy", named_binder_route(binder, "copy") %>)
   		(<%= link_to "Permissions", named_binder_route(binder, "permissions") %>)
-  		(<%= link_to "Delete", binder_path(binder), :method => :delete %>)
+  		(<%= link_to "Delete", named_binder_route(binder), :method => :delete %>)
   		<%= "(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")") if !binder.body.blank? %>
   		<%= "(#{binder.files} files, #{binder.folders} folders)" if binder.type == 1 %>
   		(<%= binder.type == 1 ? binder.total_size : binder.versions.last.size %>b)
