Some binder partials implemented

--- a/app/views/binders/index.html.erb
+++ b/app/views/binders/index.html.erb
@@ -1,23 +1,8 @@
 <h3>Binders#<%= params[:action] %></h3>
 <p>app/views/binders/<%= params[:action] %>.html.erb</p>
-<p>Currently In: <%= link_to "Home", binders_path(current_teacher.username || current_teacher.id) %> </p>
+<p>Currently In: <%= link_to "Home", binders_path(@owner.username || @owner.id) %> </p>
 
-<div>Contents:
-	<br />
-	<%= "Empty" if @binders.empty? %>
-	<% @binders.each do |binder| %>
-	  <%= link_to binder.title, named_binder_route(binder) %>
-    (<%= link_to "Edit", named_binder_route(binder, "edit") %>)
-  	(<%= link_to "Move", named_binder_route(binder, "move") %>)
-    (<%= link_to "Copy", named_binder_route(binder, "copy") %>)
-  	(<%= link_to "Permissions", named_binder_route(binder, "permissions") %>)
-  	(<%= link_to "Delete", named_binder_route(binder), :method => :delete %>)
-  	<%= !binder.body.blank? ? ("(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")")) : "" %>
-  	<%= "(#{binder.files} files, #{binder.folders} folders)" if binder.type == 1 %>
-  	(<%= binder.type == 1 ? binder.total_size : binder.versions.last.size %>b)
-  	<br />
-	<% end %>
-</div>
-<br />
+<%= render 'layouts/show' %>
+
 <%= link_to "Create new binder", new_binder_path %><br /><br />
 <%= link_to "Trash", trash_path(params[:username]) %>
