--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -1,43 +1,7 @@
-<h3>Binders#<%= params[:action] %></h3>
-<p>app/views/binders/<%= params[:action] %>.html.erb</p>
+<%= render 'layouts/breadcrumbs' %>
 
-<p>Currently In:<% @binder.parents.each do |parent| %>
-	<% if parent["id"] == "0" %>
-		<%= link_to "Home", binders_path %> /
-	<% elsif parent["id"] == "-1" %>
-		<%= link_to "Trash", trash_path %> /
-	<% else %>
-		<%= link_to parent["title"], named_binder_route(parent["id"]) %> /
-	<% end %>
-<% end %><%= link_to @binder.title, named_binder_route(@binder) %></p>
+<%= render 'layouts/show' %>
 
-<div><% if !@binder.body.blank? %>
-	Body: <%= @binder.body %>
-<br /><br />
-<% end %></div>
-
-<div>Contents:
-	<br />
-	<% if @children.empty? %>
-		Empty
-	<% end %>
-	<% @children.each do |binder| %>
-
-  		<%= link_to binder.title, named_binder_route(binder) %>
-		<%= link_to "(Update)", named_binder_route(binder, "update") if binder.type == 2 %>
-		<%= link_to "(Versions)", named_binder_route(binder, "versions") if binder.type == 2 %>
-		(<%= link_to "Edit", named_binder_route(binder, "edit") %>)
-  		(<%= link_to "Move", named_binder_route(binder, "move") %>)
-  		(<%= link_to "Copy", named_binder_route(binder, "copy") %>)
-  		(<%= link_to "Permissions", named_binder_route(binder, "permissions") %>)
-  		(<%= link_to "Delete", named_binder_route(binder), :method => :delete %>)
-  		<%= "(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")") if !binder.body.blank? %>
-  		<%= "(#{binder.files} files, #{binder.folders} folders)" if binder.type == 1 %>
-  		(<%= binder.type == 1 ? binder.total_size : binder.versions.last.size %>b)
-	 	<br />
-
-	<% end %>
-</div>
 <br />
 <%= link_to "Up one level", @binder.parent["id"] == "0" ? binders_path : binder_path(@binder.parent["id"]) %> |
 <%= link_to "Create new binder", new_binder_path %> |
