--- a/app/views/binders/move.html.erb
+++ b/app/views/binders/move.html.erb
@@ -1,7 +1,7 @@
 <h3>Binders#<%= params[:action] %></h3>
 <p>app/views/binders/<%= params[:action] %>.html.erb</p>
 
-<%= form_for @binder, :url => move_binder_path do |f| %>
+<%= form_for @binder, :url => named_binder_route(@binder, "move") do |f| %>
 
   <div><%= f.label :parent,
     "Move #{@binder.title} From #{@binder.parent["id"] == "0" ? "Home" : @binder.parent["title"]} to:" %>
