--- a/app/views/binders/showcroc.html.erb
+++ b/app/views/binders/showcroc.html.erb
@@ -2,9 +2,9 @@
 
 
 <% if false %>
-	Url: <%= @binder.components.last.file.url %>
+	Url: <%= @binder.versions.last.file.url %>
 	<br /><br />
-	Current path: <%= @binder.components.last.file.current_path %>
+	Current path: <%= @binder.versions.last.file.current_path %>
 	<br /><br />
 	Uuid: <%= @uuid.inspect %>
 	<br /><br />
