--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -15,8 +15,8 @@
 		<% @children.each do |binder| %>
 			[<%= binder.order_index %>]
 			<%= link_to binder.title, named_binder_route(binder) %>
-			<% if !binder.components.last.nil? %>
-				<%= link_to "(Croc)", named_binder_route(binder)+'/croc' if !binder.components.last.croc_uuid.nil? %>
+			<% if !binder.versions.last.nil? %>
+				<%= link_to "(Croc)", named_binder_route(binder)+'/croc' if !binder.versions.last.croc_uuid.nil? %>
 			<% end %>
 				<%= link_to "(Update)", named_binder_route(binder, "update") if binder.type == 2 %>
 				<%= link_to "(Versions)", named_binder_route(binder, "versions") if binder.type == 2 %>
@@ -27,7 +27,9 @@
 				<%= link_to "(Delete)", named_binder_route(binder), :method => :delete %>
 				<%= "(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")") if !binder.body.blank? %>
 				<%= "(#{binder.files} files, #{binder.folders} folders)" if binder.type == 1 %>
-				(<%= binder.type == 1 ? binder.total_size : binder.components.last.size %>b)
+			<% if !binder.versions.last.nil? %>
+				(<%= binder.type == 1 ? binder.total_size : binder.versions.last.size %>b)
+			<% end %>
 			<br />
 		<% end %>
 	<% end %>
