--- a/app/views/teachers/showbinder.html.erb
+++ b/app/views/teachers/showbinder.html.erb
@@ -35,7 +35,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<% end %>
 				<% if c_binder.format == 1 %>
-					<%= link_to File.basename(c_binder.components.last.file.url), c_binder.components.last.file.url %><br />
+					<%= link_to File.basename(c_binder.versions.last.file.url), c_binder.versions.last.file.url %><br />
 				<% else %>
 			  		[<%= link_to c_binder.title, show_binder_path(params[:id],c_binder.id) %>]<br />
 			  	<% end %>
