--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -14,7 +14,8 @@
 	<% else %>
 		<% @children.each do |binder| %>
 			[<%= binder.order_index %>]
-			<%= get_binder_image(binder,{:height => 150, :border => 1}) %>
+			<%= get_binder_image(binder,{ :border => 1 })#{ :height => 150, :border => 1 }) 
+			%>
 			<%= link_to binder.title, named_binder_route(binder) %>
 			<% if !binder.versions.last.nil? %>
 				<%= link_to "(Croc)", named_binder_route(binder)+'/croc' if !binder.versions.last.croc_uuid.nil? %>
