--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :headcon do
+	stylesheet_link_tag 'binders/folder'
+end %>
+
 <%= render 'layouts/breadcrumbs' %>
 
 <%= render 'layouts/show' %>
