--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,22 +1,48 @@
-<%= link_to "Claco", root_path, :class => 'brand' %>
-<ul class="nav">
-  <% if teacher_signed_in? %>
-    <li>
-    <%= link_to 'Logout', destroy_teacher_session_path, :method=>'delete' %>
-    </li>
-  <% else %>
-    <li>
-    <%= link_to 'Login', new_teacher_session_path %>
-    </li>
-  <% end %>
-  <% if teacher_signed_in? %>
-    <li>
-    <%= link_to 'Edit account', edit_teacher_registration_path %>
-    </li>
-  <% else %>
-    <li>
-    <%= link_to 'Sign up', new_teacher_registration_path %>
-    </li>
-  <% end %>
-</ul>
-<!--<hr />-->
+
+
+<div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#"><%= image_tag("logo.png") %></a>
+          <div class="nav-collapse">
+
+            <ul class="nav nav-pills pull-right">
+              <li class="dropdown">
+
+                <button id="top-notch-btn" data-toggle="dropdown" class="btn">Sign in</button>
+                <ul class="dropdown-menu noclose">
+                  <input type="text" class="span3 login-focus" placeholder="Username / Email">
+                  <input type="password" class="span3" placeholder="Password">
+                  <div style="font-size:10px; float:left; margin-top:8px">
+                    <a href="#">Forgot your password?</a>
+                  </div>
+                  <button type="submit" class="btn" style="float:right">Sign in</button>
+
+                  <div style="clear:both"></div>
+
+                  <div class="signup-opt">
+
+                    <div class="or-account">
+                    or sign in with
+                    </div>
+                
+                    <a href="#" class="zocial facebook">Facebook</a>
+                    <a href="#" class="zocial twitter">Twitter</a>
+                  </div>
+
+                </ul>
+              </li>
+            </ul>
+
+
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="async-pop alert"></div>
