--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -109,9 +109,21 @@ end %>
 			            <div class="descarea">Last updated by <a href="#">Eric Simons</a> at 2:33pm</div>
 
 			            <div class="drop-tog">
-			              <button id="droptog-btn" class="btn">
-			              <div class="tog-arrow"></div>
-			              </button>
+			            	<div class="btn-group">
+
+					          <button id="droptog-btn" data-toggle="dropdown" class="btn dropdown-toggle">
+					          <div class="tog-arrow"></div>
+					          </button>
+
+					          <ul class="dropdown-menu">
+					            <li><a href="#">Rename</a></li>
+					            <li><a href="#">Copy</a></li>
+					            <li><a href="#">Move</a></li>
+					            <li><a href="#">Delete</a></li>
+					          </ul>
+
+					        </div>
+
 			            </div>
 
 
