--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -718,6 +718,23 @@
   margin-top:15px;
 }
 
+#list-pane .content-list .content-item .drop-tog .dropdown-menu{
+  margin-left:-68px !important;
+  min-width:100px !important;
+}
+
+#list-pane .content-list .content-item .drop-tog .dropdown-menu li > a:hover, .dropdown-menu .active > a, .dropdown-menu .active > a:hover {
+  border:1px solid #ccc;
+  color:#444;
+  text-shadow: 0 1px 1px #fff;
+  margin:-1px;
+    background-color: #eee;
+
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);  
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);  
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
 #droptog-btn {
   padding: 12px 9px 10px 9px;
   color:#333;
