--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -94,7 +94,7 @@ end %>
 
 
 
-					<div id="<%= binder.id %>" class="content-item">
+					<div id="<%= binder.id %>" class="content-item<%= ' droppable' if binder.type == 1 %>">
 
 			            <div class="folder-preview">
 			              <div class="single-hold" style="background-image:url('<%= get_binder_image(binder) %>');">
