--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -14,7 +14,9 @@ end %>
 	javascript_include_tag "binders/taginit"
 end %>
 
-
+<script type="javascript">
+	isEditable=<%= @binder.get_access(current_teacher.id.to_s) > 0 ? "true;" : "false;"  %>
+</script>
 <div class="container">
 	<div id="list-pane">
 		<% if params[:action] == "show" %>
