eric is a butthead

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -15,7 +15,7 @@ end %>
 end %>
 
 <script type="javascript">
-	isEditable=<%= @binder.get_access(current_teacher.id.to_s) > 0 ? "true;" : "false;"  %>
+	isEditable=<%= @binder.get_access(current_teacher.id.to_s) > 0 ? "true" : "false"  %>;
 </script>
 <div class="container">
 	<div id="list-pane">
